FLINK-24431 Remove Java 11 language feature usage in consumer unit test.